@@ -1,5 +1,10 @@
 2010-02-12  Abel Cheung  <abelcheung@gmail.com>
 
+	* misc/ZeroClipboard.js:
+	- Use newest upstream release, 1.0.5.
+
+2010-02-12  Abel Cheung  <abelcheung@gmail.com>
+
 	* scorerender-admin.php:
 	- (scorerender_admin_add_js) Rename to scorerender_admin_head().
 	- Add help icon next to admin page header, and make help text foldable.
